--- a/style.css
+++ b/style.css
@@ -421,6 +421,12 @@ section {
     font-size: 1.6rem;
     opacity: 0.8;
 }
+.projects .heading {
+    margin-bottom: 90px;
+}
+.projects h2 {
+    margin-bottom: 50px;
+}
 .projects h2 span {
 	background: linear-gradient(270deg, #048238 10%, #07c6b6f8 100%);
     background-clip: text;
@@ -444,14 +450,6 @@ section {
     box-shadow: 0 0 3px var(--main-color),
                 0 0 3px var(--main-color);
 }
-/*.web-apps {
-    font-size: 35px;
-    font-weight: 600;
-    margin-bottom: 40px;
-    background: linear-gradient(270deg, #048238 10%, #00FFFF 100%);
-    background-clip: text;
-    color: transparent;
-}*/
 .web-apps h2 {
     position: relative;
     font-size: 32px;
